# QtAwesome

./: CMakeLists.txt
